--- a/public/css/style.css
+++ b/public/css/style.css
@@ -93,7 +93,7 @@ h1 {
 }
 
 .locate-me-btn {
-    background-color: #17a2b8; /* Teal button */
+    background-color: #1735b8; /* Teal button */
     color: white;
     border: none;
     padding: 10px;
