--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,6 +18,7 @@
         <div id="driverInput" class="input-container" style="display: none;">
             <input type="text" id="busNumber" placeholder="Enter Bus Number" class="input-field" />
             <button id="shareLocationBtn" class="action-btn">Share My Location</button>
+            <button id="stopSharingBtn" class="action-btn">Stop Sharing Location</button>
         </div>
         <div id="passengerInput" class="input-container" style="display: none;">
             <input type="text" id="passengerName" placeholder="Enter Your Name" class="input-field" />
